<resources>
    <string name="app_name">Find Your Style</string>

    //activity_main
    <string name="btnIniciarSesion">INICIAR SESIÓN</string>
    <string name="editTxt_password">Contraseña</string>
    <string name="editTxt_nombreUsuraio">Nombre de Usuario</string>
    <string name="txtRecuperarPassword">¿Tienes Problemas para ingresar?</string>
    <string name="txtRegistarse">Registrarse</string>

    //Fragments Inicio
    <string name="frangmentInicio">Hola desde inicio</string>
    <string name="txt_loMasBuscado">Lo mas buscado</string>
    <string name="txt_tiendasRecomendadas">Tiendas Recomendadas</string>

    //Fragments Buscar
    <string name="fragmentBuscar">Hola desde buscar</string>
    <string name="editTextBuscar">Buscar</string>


    //Fragments Agenda
    <string name="fragmentAgenda">Hola desde Agenda</string>

    //Fragment Perfil
    <string name="fragmentPerfil">Hola desde Perfil</string>

    //Fragment txt View
    <string name="txt_inicio1">Inicio</string>
    <string name="txt_buscar">Buscar</string>
    <string name="txt_agenda">Agenda</string>
    <string name="txt_perfil">Pefil</string>

    <string name="ip">http://192.168.43.222/</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="TXTterminos_y_condiciones">i.	Se adquirirán las licencias para los softwares que se utilizarán en el desarrollo de esta solución informática de manera autentica para evitar los inconvenientes legales en el futuro.
ii.	Sobre la protección de la vida lay 19.628 que estipula El tratamiento de los datos de carácter personal en registros o bancos de datos por organismos públicos o por particulares se sujetará a las disposiciones de esta ley, con excepción del que se efectúe en ejercicio de las libertades de emitir opinión y de informar, el que se regulará por la ley a que se refiere el artículo 19, N° 12, de la Constitución Política.
iii.	Ley N.° 17.336 que estipula la protección de los derechos que, por el solo hecho de la creación de la obra, adquieren los autores de obras de la inteligencia en los dominios literarios, artísticos y científicos, cualquiera que sea su forma de expresión, y los derechos conexos que ella determina.
iv.	Oficio N.º 4467 de Servicio de Impuestos Internos que trata sobre tributario del IVA aplicable a la transferencia mediante medios electrónicos de bienes protegidos por la Ley N.° 17.336, sobre propiedad intelectual, dentro de los cuales se encuentran los programas computacionales.
v.	Para distribuir esta aplicación además se deben pasar una serie filtros y cumplir con los requisitos que estipula Google Play
        vi. Usted concede a darnos acceso a su dispositivo asi como fotos, acceso a la camara etc.
        vii. Ademas los datos de su cuenta no seran eliminado para la veracidad de los datos extistentes ademas de la capacidad de reactivar la cuenta con su correo.
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>
