<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.InicioFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/iconSalir_fragmentInicio"
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:src="@drawable/icon_exit"/>

    <ImageView
        android:id="@+id/notificacion_fragmentInicio"
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="360dp"
        android:src="@mipmap/notificacion_icon"
        />


    <TextView
        android:id="@+id/text_inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="160dp"
        android:textSize="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/txt_inicio1"
        android:textColor="@color/colorNegro"/>

    <com.google.android.material.circularreveal.CircularRevealGridLayout
        android:id="@+id/idGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:columnCount="1"
        android:rowCount="4"
        android:layout_below="@+id/text_inicio">

        <TextView
            android:id="@+id/txt_loMasBuscado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/txt_loMasBuscado"
            android:textSize="20dp"
            android:textColor="@color/colorNegro"/>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/txtTiendasRecomendadas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="295dp"
            android:text="@string/txt_tiendasRecomendadas"
            android:textSize="20dp"
            android:textColor="@color/colorNegro"/>
    </com.google.android.material.circularreveal.CircularRevealGridLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_lo_mas_buscado"
        android:layout_marginTop="125dp"
        android:layout_width="wrap_content"
        android:layout_height="259dp"
        android:scrollbars="horizontal"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_tiendas_recomendadas"
        android:layout_width="wrap_content"
        android:layout_height="259dp"
        android:layout_marginTop="440dp"
        android:scrollbars="horizontal"/>




</RelativeLayout>